--- a/adminboundarymanager/templates/adminboundarymanager/boundary_preview.html
+++ b/adminboundarymanager/templates/adminboundarymanager/boundary_preview.html
@@ -2,21 +2,15 @@
 {% load i18n %}
 {% load l10n %}
 {% load wagtailadmin_tags wagtailimages_tags static %}
-{% block titletag %}{% blocktrans with title=page.get_admin_display_title %}Boundary Preview{{ title }}
+{% block titletag %}{% blocktrans with title=page.get_admin_display_title %}Admin Boundary Data{{ title }}
 {% endblocktrans %}{% endblock %}
 {% block extra_css %}
     {{ block.super }}
     <link href="https://unpkg.com/maplibre-gl@3.1.0/dist/maplibre-gl.css" rel="stylesheet"/>
 {% endblock %}
 
-{% block header %}
-    {% block header_extra %}
-        <div>HELLO</div>
-    {% endblock %}
-{% endblock %}
-
 {% block content %}
-    {% trans "Boundary Preview" as header_str %}
+    {% trans "Administrative Boundaries Data" as header_str %}
 
     {% include "wagtailadmin/shared/header.html" with title=header_str icon="map" action_url=load_boundary_url action_text="Add Boundary" %}
 
