--- a/adminboundarymanager/templates/adminboundarymanager/boundary_loader.html
+++ b/adminboundarymanager/templates/adminboundarymanager/boundary_loader.html
@@ -19,27 +19,46 @@
     <div class="nice-padding">
         <div style="margin-top: 40px;"
              id="upload_form_wrapper">
-            <form action="{% url 'adminboundarymanager_load_boundary' %}" method="POST"
-                  enctype="multipart/form-data">
-                {% if form.non_field_errors %}
-                    <div class="non-field_errors" style="margin-bottom: 20px">
-                        {% include "wagtailadmin/shared/non_field_errors.html" with form=form %}
+            {% if data_source_unimplemented %}
+                <div class="help-block help-info">
+                    <svg class="icon icon-help icon" aria-hidden="true">
+                        <use href="#icon-help"></use>
+                    </svg>
+                    <p>The boundary source you selected in boundary settings is not yet implemented.</p>
+                    <div>
+                        <p>Please select <b>OCHA COD ABS</b> source for now as we work to implement other sources</p>
                     </div>
-                {% endif %}
-                <ul class="fields">
-                    {% csrf_token %}
-                    {% for field in form %}
-                        {% if field.is_hidden %}
-                            {{ field }}
-                        {% else %}
-                            {% include "wagtailadmin/shared/field_as_li.html" %}
-                        {% endif %}
-                    {% endfor %}
-                    <li>
-                        <button type="submit" class="button"> {% trans 'Upload' %}</button>
-                    </li>
-                </ul>
-            </form>
+                </div>
+                <a href="{{ settings_url }}" class="button bicolor button--icon button-secondary"><span
+                        class="icon-wrapper">
+                    <svg class="icon icon-edit icon" aria-hidden="true">
+                        <use href="#icon-edit"></use>
+                    </svg>
+                </span>Change Source
+                </a>
+            {% else %}
+                <form action="{% url 'adminboundarymanager_load_boundary' %}" method="POST"
+                      enctype="multipart/form-data">
+                    {% if form.non_field_errors %}
+                        <div class="non-field_errors" style="margin-bottom: 20px">
+                            {% include "wagtailadmin/shared/non_field_errors.html" with form=form %}
+                        </div>
+                    {% endif %}
+                    <ul class="fields">
+                        {% csrf_token %}
+                        {% for field in form %}
+                            {% if field.is_hidden %}
+                                {{ field }}
+                            {% else %}
+                                {% include "wagtailadmin/shared/field_as_li.html" %}
+                            {% endif %}
+                        {% endfor %}
+                        <li>
+                            <button type="submit" class="button"> {% trans 'Upload' %}</button>
+                        </li>
+                    </ul>
+                </form>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
